minimal updates to content and UI

--- a/index.html
+++ b/index.html
@@ -9,10 +9,31 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Poppins:wght@500;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>Utti Ramesh Portfolio</title>
+    <title>Freelance React Developer | Utti Ramesh</title>
+    <meta
+      name="description"
+      content="Freelance React and Next.js developer helping startups build fast, conversion-focused frontends. Hire a frontend developer in India for performance optimization, UI refactoring, and scalable web apps."
+    />
+    <meta
+      name="keywords"
+      content="Freelance React Developer, Frontend Developer India, Next.js Developer, React Performance Optimization, Hire React Developer"
+    />
+    <meta property="og:title" content="Freelance React Developer | Utti Ramesh" />
+    <meta
+      property="og:description"
+      content="Premium React frontends for startups and product teams. Performance, accessibility, and scalable UI systems."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_US" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Freelance React Developer | Utti Ramesh" />
+    <meta
+      name="twitter:description"
+      content="Hire a React/Next.js freelancer focused on performance, UX, and conversion-driven interfaces."
+    />
   </head>
   <body>
     <div id="root"></div>
